2010-04-22  Fumitoshi Ukai  <ukai@chromium.org>

        Unreviewed fix.

        * Scripts/webkitpy/layout_tests/port/websocket_server.py: fix NameError: global name 'f' is not defined.

2010-04-22  Fumitoshi Ukai  <ukai@chromium.org>

        Unreviewed fix.

        * Scripts/new-run-webkit-websocketserver: PyWebSocket no longer takes keyword argument 'register_cygwin'.

2010-04-22  Eric Seidel  <eric@webkit.org>

        Unreviewed.  Restore the Leopard bots to using
        old-run-webkit-tests for now.

        * Scripts/run-webkit-tests:

2010-04-22  Fumitoshi Ukai  <ukai@chromium.org>

        Unreviewed fix.

        * Scripts/webkitpy/layout_tests/port/http_server.py: fix NameError: global name 'env' is not defined.

2010-04-22  Fumitoshi Ukai  <ukai@chromium.org>

        Unreviewed fix.

        * Scripts/webkitpy/layout_tests/port/websocket_server.py: fix NameError: global name 'env' is not defined.

2010-04-22  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Adam Barth.

        Chromium: Add --chromium option to new-run-webkit-websocketserver
        https://bugs.webkit.org/show_bug.cgi?id=37664

        Move cygwin setup logic in chromium_win.py.

        * Scripts/new-run-webkit-httpd: remove register_cygwin parameter to pass http_server.
        * Scripts/new-run-webkit-websocketserver: add --chromium flag
        * Scripts/webkitpy/layout_tests/port/chromium_win.py: setup for cygwin
        * Scripts/webkitpy/layout_tests/port/http_server.py: remove cygwin setup logic
        * Scripts/webkitpy/layout_tests/port/websocket_server.py: remove cygwin setup logic

2010-04-22  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        new-run-webkit-tests --verbose shows ever-increasing #EOF lines
        https://bugs.webkit.org/show_bug.cgi?id=37794

        * Scripts/webkitpy/layout_tests/layout_package/dump_render_tree_thread.py:
         - Fix the log message to explain that this is stderr output, not test output.